--- a/templates/js-assessment.html
+++ b/templates/js-assessment.html
@@ -161,7 +161,7 @@
 <script>
   "use strict";
   // JQuery practice
-  $("#kittenz-rule").on('click', function(){$("#kittenz-rule").attr("src", "static/img/dog.gif");});
+  $("#kittenz-rule").on('click', function(){$("#kittenz-rule").attr("src", "https://images-na.ssl-images-amazon.com/images/G/01/img15/pet-products/small-tiles/23695_pets_vertical_store_dogs_small_tile_8._CB312176604_.jpg");});
 
 </script>
 
@@ -194,6 +194,8 @@
 <script>
   "use strict";
   // play button press condition
+  var randint = 0;
+
   $("#play-guessing-game").on('click', function(){
     // function disable the play button
     $("#play-guessing-game").prop('disabled', true);
@@ -202,12 +204,10 @@
     //"try-this-number" enable
     $("#try-this-number").prop('disabled', false);
     $("#number-guessed").prop('disabled', false);
+    // function pick a random integer from 1-100
+    var number = Math.floor(Math.random()*100);
+    return randint = number;
   });
-
-  // function pick a random integer from 1-100
-  var randint = Math.floor(Math.random()*100);
-  // console.log(randint); //this line can be used for testing
-  // passing the value seems to be setting up custom attribute in the html, then call it below due to time limit, the global var used because it generates randint no matter it seems more ideal to use passing the value
   
   // press guess
   $("#try-this-number").on('click', function(evt){
